[project]
name = "dqn-atari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.12.0",
    "gymnasium[other]>=1.3.0",
    "huggingface-hub>=1.20.1",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "torch>=2.12.1",
]
